--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <!-- header section================= -->
       <header>
 
-          <section class=" text-center lg:flex justify-between items-center w-11/12 mx-auto py-5 ">
+          <section class=" lg:flex justify-between items-center w-11/12 mx-auto py-5 ">
             <!-- logo======== -->
             <div class=" lg:flex gap-2 items-cente ">
-                <div>
+                <div class=" flex items-center">
                    <img class="w-13 mx-auto" src="./assets/logo.png" alt="">
                 </div>
 
-                   <p class=" text-2xl font-bold text-green-900">Emergency <br>Service</p>
+                   <p class=" text-2xl font-bold text-green-900 lg:text-left text-center">Emergency <br>Service</p>
             </div>          
            <div class="flex items-center justify-center lg:gap-10 gap-5 lg:mt-0 mt-5">
             <!-- heart =========== -->
             <div class="flex  items-center justify-center gap-3 bg-[#41ff6b1a] text-xl font-bold py-3 lg:px-10 px-6 rounded-full">
-                <h2>0</h2>
+                <h2 id="total-heart">0</h2>
                 <img class="w-7" src="./assets/heart.png" alt="">
             </div>
              <!-- coin ============= -->
@@ -43,7 +43,7 @@
           </section>
       </header>
       <!-- main section ================================== -->
-     <main class="bg-[#ebffec]">
+     <main class="bg-[#eefcef]">
         <!-- banner section ================== -->
           <section  class=" bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center">
             <img class="py-5 mx-auto w-24 " src="./assets/logo-dark.png" alt="logo">
@@ -55,13 +55,15 @@
      <section class="w-11/12 mx-auto lg:grid grid-cols-12 gap-10 mt-15">
 
      <section class="col-span-9 ">
-        <div class=" card-container lg:grid grid-cols-3 gap-5 mb-10 ">
-            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 ">
+        <div id="card-container" class="lg:grid grid-cols-3 gap-5 mb-10 ">
+            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 shadow ">
                 <div class="flex justify-between  items-center">
                    <figure class=" py-2 px-4 bg-[#ffe3e2] rounded-xl">
                      <img class="w-8" src="./assets/emergency.png" alt="">
                    </figure>
-                    <i class="fa-regular fa-heart "></i>
+                   <div class="text-2xl text-gray-500">
+                     <i  class="fa-regular fa-heart heart-btn"></i>
+                   </div>
                 </div>
                 <h2 class="lg:text-2xl text-xl font-bold">National Emergency Number</h2>
                 <p class="lg:text-lg text-base text-gray-500">National Emergency</p>
@@ -76,12 +78,14 @@
                    <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
-            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 ">
+            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8  shadow">
                 <div class="flex justify-between  items-center">
                    <figure class=" py-2 px-4 bg-[#dfefff] rounded-xl">
                      <img class="w-8" src="./assets/police.png" alt="">
                    </figure>
-                    <i class="fa-regular fa-heart "></i>
+                    <div class="text-2xl text-gray-500">
+                     <i  class="fa-regular fa-heart heart-btn"></i>
+                   </div>
                 </div>
                 <h2 class="lg:text-2xl text-xl font-bold">Police Helpline Number</h2>
                 <p class="lg:text-lg text-base text-gray-500">Police</p>
@@ -96,12 +100,14 @@
                    <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
-            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 ">
+            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 shadow ">
                 <div class="flex justify-between  items-center">
                    <figure class=" py-2 px-4 bg-[#ffe3e2] rounded-xl">
                      <img class="w-8" src="./assets/fire-service.png" alt="">
                    </figure>
-                    <i class="fa-regular fa-heart "></i>
+                   <div class="text-2xl text-gray-500">
+                     <i  class="fa-regular fa-heart heart-btn"></i>
+                   </div>
                 </div>
                 <h2 class="lg:text-2xl text-xl font-bold">Fire Service Number</h2>
                 <p class="lg:text-lg text-base text-gray-500">Fire Service</p>
@@ -116,12 +122,14 @@
                    <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
-            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 ">
+            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 shadow ">
                 <div class="flex justify-between  items-center">
                    <figure class=" py-2 px-4 bg-[#ffe3e2] rounded-xl">
                      <img class="w-8" src="./assets/ambulance.png" alt="">
                    </figure>
-                    <i class="fa-regular fa-heart "></i>
+                    <div class="text-2xl text-gray-500">
+                     <i  class="fa-regular fa-heart heart-btn"></i>
+                   </div>
                 </div>
                 <h2 class="lg:text-2xl text-xl font-bold">Ambulance Service</h2>
                 <p class="lg:text-lg text-base text-gray-500">Ambulance</p>
@@ -136,12 +144,14 @@
                    <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
-            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 ">
+            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 shadow ">
                 <div class="flex justify-between  items-center">
                    <figure class=" py-2 px-4 bg-[#ffe3e2] rounded-xl">
                      <img class="w-8" src="./assets/emergency.png" alt="">
                    </figure>
-                    <i class="fa-regular fa-heart "></i>
+                    <div class="text-2xl text-gray-500">
+                     <i  class="fa-regular fa-heart heart-btn"></i>
+                   </div>
                 </div>
                 <h2 class="lg:text-2xl text-xl font-bold">Women & Child Helpline</h2>
                 <p class="lg:text-lg text-base text-gray-500">Women & Child Helpline</p>
@@ -156,12 +166,14 @@
                    <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
-            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 ">
+            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 shadow ">
                 <div class="flex justify-between  items-center">
                    <figure class=" py-2 px-4 bg-[#ffe3e2] rounded-xl">
                      <img class="w-8" src="./assets/emergency.png" alt="">
                    </figure>
-                    <i class="fa-regular fa-heart "></i>
+                   <div class="text-2xl text-gray-500">
+                     <i  class="fa-regular fa-heart heart-btn"></i>
+                   </div>
                 </div>
                 <h2 class="lg:text-2xl text-xl font-bold">Anti-Corruption Helpline</h2>
                 <p class="lg:text-lg text-base text-gray-500">Anti-Corruption</p>
@@ -176,12 +188,14 @@
                    <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
-            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 ">
+            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8  shadow">
                 <div class="flex justify-between  items-center">
                    <figure class=" py-2 px-4 bg-[#ffe3e2] rounded-xl">
                      <img class="w-8" src="./assets/emergency.png" alt="">
                    </figure>
-                    <i class="fa-regular fa-heart "></i>
+                    <div class="text-2xl text-gray-500">
+                     <i  class="fa-regular fa-heart heart-btn"></i>
+                   </div>
                 </div>
                 <h2 class="lg:text-2xl text-xl font-bold">Electricity Helpline</h2>
                 <p class="lg:text-lg text-base text-gray-500">Electricity Outage</p>
@@ -196,12 +210,14 @@
                    <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
-            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 ">
+            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 shadow ">
                 <div class="flex justify-between  items-center">
                    <figure class=" py-2 px-4 bg-[#ffe3e2] rounded-xl">
                      <img class="w-8" src="./assets/emergency.png" alt="">
                    </figure>
-                    <i class="fa-regular fa-heart "></i>
+                   <div class="text-2xl text-gray-500">
+                     <i  class="fa-regular fa-heart heart-btn"></i>
+                   </div>
                 </div>
                 <h2 class="lg:text-2xl text-xl font-bold">Brac Helpline</h2>
                 <p class="lg:text-lg text-base text-gray-500">Brac</p>
@@ -216,12 +232,14 @@
                    <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
-            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 ">
+            <div class="bg-white p-6  rounded-xl lg:mb-0 mb-8 shadow ">
                 <div class="flex justify-between  items-center">
                    <figure class=" py-2 px-4 bg-[#ffe3e2] rounded-xl">
                      <img class="w-8" src="./assets/emergency.png" alt="">
                    </figure>
-                    <i class="fa-regular fa-heart "></i>
+                   <div class="text-2xl text-gray-500">
+                     <i  class="fa-regular fa-heart heart-btn"></i>
+                   </div>
                 </div>
                 <h2 class="lg:text-2xl text-xl font-bold">Bangladesh Railway Helpline </h2>
                 <p class="lg:text-lg text-base text-gray-500">Bangladesh Railway</p>
