clicking the Copy button, show an alert and increase the copy count

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           </div>
           <!-- coin ============= -->
           <div class="flex   items-center justify-center gap-3 bg-[#41ff6b1a] text-xl font-bold py-3   px-9 rounded-full">
-          <h2>100</h2>
+          <h2 id="coin">100</h2>
           <img class="w-7" src="./assets/coin.png" alt="">
           </div>
           <!-- copy ======== -->
           <div class="border-2 bg-[#29A74A] text-white font-medium rounded-full  py-3 lg:px-10 px-5">
-          <h2><span>0</span>&nbsp;Copy</h2>
+          <h2><span id="copy-count">0</span>&nbsp;Copy</h2>
           </div>
           </div>
       </section>
@@ -69,7 +69,7 @@
                 </div> 
                 <!-- butoon ===================== -->
                 <div class="flex gap-3 pr-5 pt-5">
-                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
+                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white copy-button"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
                 <button  class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400 call-button"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
@@ -90,7 +90,7 @@
                 </div> 
                 <!-- butoon ===================== -->
                 <div class="flex gap-3 pr-5 pt-5">
-                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white"> <i class="fa-solid fa-copy text-gray-300 "></i>Copy</button>
+                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white copy-button"> <i class="fa-solid fa-copy text-gray-300 "></i>Copy</button>
                 <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400 call-button"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
@@ -111,7 +111,7 @@
                 </div> 
                 <!-- butoon ===================== -->
                 <div class="flex gap-3 pr-5 pt-5">
-                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
+                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white copy-button"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
                 <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400 call-button"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
@@ -132,7 +132,7 @@
                 </div> 
                 <!-- butoon ===================== -->
                 <div class="flex gap-3 pr-5 pt-5">
-                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
+                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white copy-button"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
                 <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400 call-button"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
@@ -153,7 +153,7 @@
                 </div> 
                 <!-- butoon ===================== -->
                 <div class="flex gap-3 pr-5 pt-5">
-                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
+                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white copy-button"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
                 <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400 call-button"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
@@ -174,7 +174,7 @@
                 </div> 
                 <!-- butoon ===================== -->
                 <div class="flex gap-3 pr-5 pt-5">
-                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
+                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white copy-button"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
                 <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400 call-button"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
@@ -195,7 +195,7 @@
                 </div> 
                 <!-- butoon ===================== -->
                 <div class="flex gap-3 pr-5 pt-5">
-                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
+                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white copy-button"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
                 <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400 call-button"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
@@ -216,7 +216,7 @@
                 </div> 
                 <!-- butoon ===================== -->
                 <div class="flex gap-3 pr-5 pt-5">
-                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
+                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white copy-button"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
                 <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400 call-button"><i class="fa-solid fa-phone"></i> Call</button> 
                 </div>
             </div>
@@ -237,8 +237,8 @@
                 </div> 
                 <!-- butoon ===================== -->
                 <div class="flex gap-3 pr-5 pt-5">
-                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
-                <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400 call-button"><i class="fa-solid fa-phone"></i> Call</button> 
+                <button class="btn bg-white text-gray-400 w-1/2 rounded-xl hover:bg-black hover:text-white copy-button"> <i class="fa-solid fa-copy text-gray-300"></i>Copy</button>
+                <button class="btn bg-[#00a63e] text-white w-1/2 rounded-xl hover:bg-gray-400 call-button"><i class="fa-solid fa-phone "></i> Call</button> 
                 </div>
             </div>          
         </div>
@@ -251,17 +251,11 @@
       <div class="bg-white rounded-lg lg:p-5 p-3">
             <div class=" flex justify-between items-center ">
             <h2 class="text-xl font-semibold"><i class="fa-regular fa-clock"></i> Call History</h2>
-            <button class="btn rounded-2xl text-white font-bold bg-[#00a63e] px-5 hover:bg-gray-400">Clear</button>
+            <button id="clear-btn" class="btn rounded-2xl text-white font-bold bg-[#00a63e] px-5 hover:bg-gray-400">Clear</button>
             </div>
        <!-- history contaier==============-->
             <div id="history-container" class="">
-            <div class=" flex justify-between items-center bg-gray-100 p-4 my-2 rounded-lg ">
-            <div>
-            <h1 class="text-lg font-semibold">Fire Service Number</h1>
-            <p class="text-lg text-gray-500">999</p>
-            </div>
-            <p class="font-semibold">11:36:58 AM</p>
-            </div>
+            
             </div>
       </div>
      </aside> 
