--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
 
 
        <!-- aside============= -->
-      <aside class="col-span-3 pt-16">
-      <div class="bg-white rounded-lg md:p-5 p-3">
+      <aside class="col-span-3 pt-16 pb-10">
+      <div class="bg-white rounded-lg md:p-5 p-3 h-[100%]">
             <div class=" flex justify-between items-center ">
             <h2 class="text-xl font-semibold"><i class="fa-regular fa-clock"></i> Call History</h2>
             <button id="clear-btn" class="btn rounded-2xl text-white font-bold bg-[#00a63e] px-5 hover:bg-gray-400">Clear</button>
