update readme file

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
           <img class="w-7" src="./assets/coin.png" alt="coin">
           </div>
           <!-- copy ======== -->
-          <div class="border-2 bg-[#29A74A] text-white font-medium rounded-full  py-3 md:px-10 px-5">
+          <div class="border-2  bg-[#29A74A] text-white font-medium rounded-full  py-3 md:px-10 px-5">
           <h2><span id="copy-count">0</span>&nbsp;Copy</h2>
           </div>
           </div>
       </section>
-          <!-- banner section ================== -->
+          <!-- Hero section ================== -->
       <section  class=" bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center">
           <img class="py-5 mx-auto w-24 " src="./assets/logo-dark.png" alt="logo">
           <h1 class=" font-bold md:text-[40px] text-3xl text-white px-5">Emergency Service Directory</h1>
